Fix overflow view error

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -233,4 +233,6 @@ table {
     padding: 32px;
 
     border-radius: 24px;
+
+    overflow-x: auto;
 }
